--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "@vueuse/core": "^10.6.1"
+        "@vueuse/core": "^10.6.1",
+        "vue-i18n": "^9.7.0"
     }
 }
