--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@vueuse/core": "^10.6.1",
+        "vite-plugin-run": "^0.5.1",
         "vue-i18n": "^9.7.0"
     }
 }
