--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
+        "salla/zatca": "^2.0",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
