Auto stash before merge of "master" and "origin/master"

--- a/.env.example
+++ b/.env.example
@@ -51,3 +51,22 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URL=
+
+NOON_PAYMENT_BUSINESS_ID=ptc_ksa
+NOON_PAYMENT_APP_NAME=Workmay
+NOON_PAYMENT_APP_KEY=6e2d9b786ac74a45bda4847443d91f7d
+NOON_PAYMENT_TOKEN_IDENTIFIER=
+NOON_PAYMENT_RETURN_URL=http://127.0.0.1:8000/noon_payment_response
+NOON_PAYMENT_WEBHOOK_URL=https://e9b8-176-44-78-199.ngrok-free.app/noon
+NOON_PAYMENT_MODE=Test
+NOON_PAYMENT_ORDER_CATEGORY=pay
+NOON_PAYMENT_CHANNEL=web
+# Default value - Payment API Endpoint - Chooses
+# https://api.noonpayments.com/payment/v1/
+# https://api-test.noonpayments.com/payment/v1/
+NOON_PAYMENT_PAYMENT_API=https://api-test.sa.noonpayments.com/payment/v1/
+
