--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
         "salla/zatca": "^2.0",
+        "symfony/http-client": "^6.4",
+        "symfony/mailgun-mailer": "^6.4",
+        "symfony/postmark-mailer": "^6.4",
         "tightenco/ziggy": "^1.0"
     },
     "require-dev": {
