--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/socialite": "^5.10",
         "laravel/tinker": "^2.8",
         "salla/zatca": "^2.0",
+        "sentry/sentry-laravel": "^4.1",
         "symfony/http-client": "^6.4",
         "symfony/mailgun-mailer": "^6.4",
         "symfony/postmark-mailer": "^6.4",
